# otus-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: main_workflow.yml
01-cicd-setup/: CMakeLists.txt  hello_world.cpp
02-ip-filter/: 02-tests.cpp  CMakeLists.txt  lib.cpp  lib.h  main.cpp
03-allocator/: 03-tests.cpp  CMakeLists.txt  allocator.h  container.h  main.cpp
04-sfinae/: CMakeLists.txt  main.cpp
3d-party/: CMakeLists.txt
